--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div> -->
             </div>
             <div class="buton_contain">
-                <button type="submit">sign in</button>
+                <button type="submit">sign up</button>
             </div>
         </form>
         </div>
